--- a/style.css
+++ b/style.css
@@ -8,7 +8,33 @@ body{
   font-family: var(--primary-font);
 }
 
+/* Общий стиль скроллбара */
+::-webkit-scrollbar {
+  opacity: 0.3;
+  width: 10px;            /* Толщина вертикального скролла */
+  height: 5px;            /* Толщина горизонтального скролла */
+}
 
+/* Фон скроллбара */
+::-webkit-scrollbar-track {
+  opacity: 0.3;
+  background: #f1f1f1;    /* Цвет фона трека */
+  border-radius: 10px;
+}
+
+/* Сам "ползунок" (бегунок) */
+::-webkit-scrollbar-thumb {
+  opacity: 0.3;
+  background: #f0f0f0;       /* Цвет ползунка */
+  border-radius: 10px;
+}
+
+/* При наведении */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Контейнер(область видимого контента) */
 .conteiner{
   max-width: 1200px;
   margin: 0 auto  ;
@@ -56,8 +82,8 @@ body{
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    min-height: 70vh;
     height: auto;
+    padding-bottom: 30px;
   }
   
   .header{
@@ -71,7 +97,7 @@ body{
   .right-side{
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 80px;
   }
   
   .header-nav{
@@ -84,16 +110,19 @@ body{
     font-family: var(--primary-font);
     color: black;
     font-weight: bold;
+    font-size: 18px;
   }
   
   .login-btn {
+    font-family: var(--primary-font);
+    font-weight: 900;
+    font-size: 18px;
     background-color: var(--primary-button-color);
     color: white;
     border: none;
     padding: 8px 20px;
     border-radius: 4px;
     font-weight: bold;
-    cursor: pointer;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -104,7 +133,6 @@ body{
     background-position-x: right;
     background-position-y: top;
     background-repeat: no-repeat;
-    padding-bottom: 30px;
   }
 
   .circle-button {
@@ -169,11 +197,13 @@ body{
 
 /* Index Main configuration -- Desktop */
 
+/* Temple section */
 .temple{
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 100px;
 }
 
 .temple-content{
@@ -232,6 +262,111 @@ body{
 .starter{
   margin-left: -160px;
 }
+
+/* Our-courses section */
+
+.courses-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.courses-header>h1{
+  font-size: 40px;
+}
+
+.all-courses{
+  text-decoration: none;
+  background: none;    
+  color: var(--primary-button-color);
+  font-family: var(--primary-font);   
+  border: none;
+  font-size: 18px;
+  font-weight: 550;    
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.courses-card{
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.courses-bloock{
+  background-image: url(./images/нашикурсы/htmlback.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F7F7FC;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.left-sider{
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.topper{
+  display: flex;
+  flex-flow: column wrap;
+  gap: 10px;
+  font-family: var(--primary-font);
+}
+
+.topper h1{
+  font-size: 24px;
+}
+
+.reiting{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.new-course{
+  width: 50%;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 5px 10px;
+  background-color: var(--primary-button-color);
+  color: white;
+  border-radius: 10px;
+}
+
+.course-price{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 18px;
+}
+
+.continue-to{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: #64617A;
+  font-family: var(--primary-font);
+  font-weight: 400;
+}
+
+
+
+
+
+
+
 /* Index Main configuration -- Mobile */
 
 
