--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@ h1 {
 ::-webkit-scrollbar {
   opacity: 0.3;
   width: 10px;
-  /* Толщина вертикального скролла */
   height: 5px;
-  /* Толщина горизонтального скролла */
 }
 
 /* Фон скроллбара */
@@ -207,13 +205,7 @@ h1 {
   font-size: 20px;
 }
 
-/* Footer configuration -- Desktop */
-
-/* Header configuration -- Mobile */
-
-/* Footerpxonfiguration -- Mobile */
-
-/* Index Main configuration -- Desktop */
+/* Main configuration */
 
 /* Temple section */
 .temple {
@@ -344,6 +336,7 @@ h1 {
   opacity: 0.6;
 }
 
+
 .secondback {
   background-image: url(./images/нашикурсы/vaback.png);
 }
@@ -456,7 +449,7 @@ h1 {
 /* Feedback from students */
 
 .feedback-from-students {
-  padding-top: 80px;
+  padding: 80px 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -464,7 +457,7 @@ h1 {
 
 .feedback-cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 20px;
 }
 
@@ -519,13 +512,58 @@ h1 {
   border-radius: 50%;
 }
 
+/* Footer configuration -- Desktop */
+
+.footer{
+  max-width: 100%;
+  background-color: var(--primary-footer-color);
+  padding: 40px 0;
+  color: var(--primary-background-color);
+}
+
+.footer-content{
+  display: flex;
+  justify-content: space-between;
+}
 
 
+.link-list_footer{
+  margin-top: 20px;
+  list-style: none;
+}
 
+.footer-links{
+  margin-top: 10px;
+  font-weight: 400;
+}
 
+.footer-feedback{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
+.feedback-botton{
+  font-size: 18px;
+  background-color: var(--primary-button-color);
+  padding: 10px 40px;
+  border-radius: 5px;
+  max-width: max-content;
+}
 
+.social-media-links{
+  display: flex;
+  gap: 20px;
+}
 
+.footer-navigation{
+  display: flex;
+  gap: 40px;
+}
 
-
-/* Index Main configuration -- Mobile */
+.link-block2>p ,
+.link-block1>p,
+.footer-feedback>p{
+  font-size: 18px;
+  font-weight: 600;
+}
