--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h1 {
   padding-bottom: 30px;
 }
 
-.courses-main-background{
+.courses-main-background {
   background-color: #F7F7FC;
 }
 
@@ -151,9 +151,16 @@ h1 {
 
 .welcome-background {
   background-image: url(./images/In-conteiner.png);
-  background-position-x: right;
+  background-position-x: 240px;
   background-position-y: top;
   background-repeat: no-repeat;
+}
+
+.welcome-main-pic {
+  max-width: 100%;
+  min-width: 270px;
+  width: auto;
+  height: auto;
 }
 
 .circle-button {
@@ -243,9 +250,7 @@ h1 {
 .temple-element {
   display: flex;
   gap: 20px;
-
 }
-
 
 .temple-el_right {
   display: flex;
@@ -269,6 +274,11 @@ h1 {
 .temple-el_left p {
   font-family: var(--secondary-font);
   opacity: 0.7;
+}
+
+.marker-photo{
+  height: 40px;
+  width: auto;
 }
 
 .end {
@@ -335,13 +345,7 @@ h1 {
 
 .courses-bloock:hover {
   transform: scale(1.05);
-
 }
-
-.opacityspan {
-  opacity: 0.6;
-}
-
 
 .secondback {
   background-image: url(./images/нашикурсы/vaback.png);
@@ -414,6 +418,10 @@ h1 {
   margin-top: auto;
 }
 
+.continue-to:hover{
+  color: black;
+}
+
 .absolute-for-course {
   position: relative;
   padding-bottom: 120px;
@@ -464,11 +472,11 @@ h1 {
 
 .feedback-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 
-.feedback-card{
+.feedback-card {
   background-image: url(./images/Отзывыстудентов/Samurai.png);
   background-repeat: no-repeat;
   background-position: right;
@@ -482,38 +490,38 @@ h1 {
   font-size: 18px;
 }
 
-.darksamurai{
+.darksamurai {
   background-image: url(./images/Отзывыстудентов/DarkSamurai.png);
 }
 
-.ninja{
+.ninja {
   background-image: url(./images/Отзывыстудентов/Ninja.png);
 }
 
-.feedback-top_content{
+.feedback-top_content {
   display: flex;
   flex-direction: column;
   gap: 10px;
   max-width: 250px;
 }
 
-.feedback-top_content>p>span{
+.feedback-top_content>p>span {
   color: var(--primary-button-color);
   font-weight: 600;
 }
 
-.feedback-author{
+.feedback-author {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.apostroph{
+.apostroph {
   max-width: 42px;
   height: auto;
 }
 
-.feedback-avatar{
+.feedback-avatar {
   max-width: 48px;
   height: 48px;
   border-radius: 50%;
@@ -521,36 +529,36 @@ h1 {
 
 /* Footer configuration -- Desktop */
 
-.footer{
+.footer {
   max-width: 100%;
   background-color: var(--primary-footer-color);
   padding: 40px 0;
   color: var(--primary-background-color);
 }
 
-.footer-content{
+.footer-content {
   display: flex;
   justify-content: space-between;
 }
 
 
-.link-list_footer{
+.link-list_footer {
   margin-top: 20px;
   list-style: none;
 }
 
-.footer-links{
+.footer-links {
   margin-top: 10px;
   font-weight: 400;
 }
 
-.footer-feedback{
+.footer-feedback {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.feedback-botton{
+.feedback-botton {
   color: white;
   font-size: 18px;
   background-color: var(--primary-button-color);
@@ -559,19 +567,19 @@ h1 {
   max-width: max-content;
 }
 
-.social-media-links{
+.social-media-links {
   display: flex;
   gap: 20px;
 }
 
-.footer-navigation{
+.footer-navigation {
   display: flex;
   gap: 40px;
 }
 
-.link-block2>p ,
+.link-block2>p,
 .link-block1>p,
-.footer-feedback>p{
+.footer-feedback>p {
   font-size: 18px;
   font-weight: 600;
 }
@@ -579,11 +587,11 @@ h1 {
 
 /* Courses -- Desktop */
 
-.course-main{
+.course-main {
   padding-bottom: 120px;
 }
 
-.courses-welcome{
+.courses-welcome {
   position: relative;
   z-index: 1;
   display: flex;
@@ -593,25 +601,25 @@ h1 {
   height: auto;
 }
 
-.courses-background{
+.courses-background {
   background-color: #F7F7FC;
 }
 
-.course-welcome-text{
+.course-welcome-text {
   margin-top: 30px;
   font-size: 18px;
   opacity: 0.8;
   font-family: var(--secondary-font);
 }
 
-.courses-welcome h1{
+.courses-welcome h1 {
   margin-left: 50px;
   margin-top: 40px;
   font-weight: 600;
   font-size: 100px;
 }
 
-.background-to-courses{
+.background-to-courses {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -620,7 +628,7 @@ h1 {
   z-index: -1;
 }
 
-.course-header-links{
+.course-header-links {
   font-size: 20px;
   font-weight: 500;
   font-style: normal;
@@ -629,49 +637,49 @@ h1 {
   color: #555;
 }
 
-.courses-link{
+.courses-link {
   color: #d94d4d;
   font-weight: 600;
   font-size: 20px;
 }
 
-.courses-sort{
+.courses-sort {
   padding: 20px 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.costom-sort{
+.costom-sort {
   display: flex;
   gap: 20px;
 }
 
-.sort-item{
+.sort-item {
   padding: 8px 16px;
   border-radius: 70px;
   background-color: #F7F7FC;
   color: #64617A;
 }
 
-.costomized{
+.costomized {
   background-color: var(--primary-button-color);
   color: white;
 }
 
-.common-sort{
+.common-sort {
   margin-right: 0;
   margin-left: auto;
   display: flex;
   gap: 20px;
 }
 
-.common-item{
+.common-item {
   color: #64617A;
   font-family: var(--primary-font);
 }
 
-.costomiseded{
+.costomiseded {
   color: #d94d4d;
 }
 
@@ -682,7 +690,7 @@ h1 {
   font-size: 18px;
   font-weight: 500;
   font-family: var(--primary-font);
-  white-space: nowrap; 
+  white-space: nowrap;
 }
 
 .breadcrumb-link {
@@ -717,59 +725,59 @@ h1 {
   opacity: 0.7;
 }
 
-.info-icon{
+.info-icon {
   margin-top: auto;
   margin-bottom: 0;
 }
 
-.about-welcome{
+.about-welcome {
   position: relative;
   z-index: 1;
 }
 
-.courses-abcolute{
+.courses-abcolute {
   position: absolute;
   top: 25px;
   right: 0;
   z-index: -1;
 }
 
-.about-welcome-content{
+.about-welcome-content {
   padding-top: 20px;
   padding-bottom: 40px;
   display: flex;
   justify-content: space-between;
 }
 
-.about-welcome-right>p{
+.about-welcome-right>p {
   opacity: 0.7;
 }
 
-.about-welcome-left{
+.about-welcome-left {
   display: flex;
   flex-flow: column wrap;
   gap: 20px;
 }
 
-.about-welcome-header{
+.about-welcome-header {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.left-paragraph{
+.left-paragraph {
   max-width: 620px;
   color: var(--non-active-text);
   font-size: 18px;
 }
 
-.detail-info{
+.detail-info {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.info-item{
+.info-item {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -778,7 +786,7 @@ h1 {
   border-radius: 50px;
 }
 
-.margining{
+.margining {
   margin-top: 20px;
 }
 
@@ -790,7 +798,7 @@ h1 {
 }
 
 .video-frame {
-  grid-column: span 2; 
+  grid-column: span 2;
   width: 100%;
   aspect-ratio: 16 / 9;
   border-radius: 12px;
@@ -807,33 +815,33 @@ h1 {
 }
 
 
-.courses-about-main{
+.courses-about-main {
   padding-bottom: 120px;
 }
 
-.students{
+.students {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.student{
+.student {
   font-size: 18px;
   display: flex;
   align-items: center;
   gap: 30px;
 }
 
-.boldy{
+.boldy {
   font-weight: 600;
 }
 
-.courses-info{
+.courses-info {
   padding-top: 40px;
 }
 
-.information-wrapper{
+.information-wrapper {
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -856,7 +864,7 @@ h1 {
 }
 
 .tab.active {
-  opacity: 1; 
+  opacity: 1;
 }
 
 .indicator {
@@ -868,7 +876,7 @@ h1 {
   border-radius: 2px;
 }
 
-.course-addiction-info{
+.course-addiction-info {
   background-color: #F7F7FC;
   border-radius: 10px;
   padding: 20px;
@@ -911,13 +919,124 @@ h1 {
   gap: 20px;
 }
 
-.speaker-skills{
+.speaker-skills {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
 }
 
-.remming{
+.remming {
   font-size: 1.5em;
 }
 
+@media(max-width: 1200px) {
+
+  .welcome-main-pic {
+    max-width: 320px;
+  }
+
+  .welcome-text-cont h1 {
+    font-size: 30px;
+  }
+
+  .welcome-text-cont p {
+    font-size: 16px;
+  }
+
+  .conteiner {
+    max-width: 800px;
+  }
+
+  .welcome-background {
+    background-position-x: 100px;
+    background-size: 250px;
+  }
+
+  .welcome-content {
+    padding-top: 60px;
+    gap: 0;
+  }
+
+  .courses-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .feedback-cards {
+    grid-template-columns: 1fr;
+  }
+
+  .feedback-card {
+    min-width: 280px;
+  }
+
+  .starter {
+    margin-left: -30px;
+  }
+
+  .uzumaki{
+    max-width: 80px;
+    height: auto;
+  }
+
+  .marker-photo{
+    height: 30px;
+    width: auto;
+  }
+
+  .temple-content{
+    gap: 25px;
+  }
+
+  .temple-photo {
+    width: 300px;
+    height: auto;
+  }
+
+  .temple-el_left h1{
+    font-size: 18px;
+  }
+
+  .temple-el_left p{
+    font-size: 14px;
+  }
+
+  .temple-el_right h1{
+    font-size: 18px;
+  }
+
+  .temple-element{
+    gap: 10px;
+  }
+
+  .courses-header>h1{
+    font-size: 30px;
+  }
+
+  .absolute-for-course{
+    padding-bottom: 60px;
+  }
+
+  .space-for-our_knowledge{
+    padding: 20px 0;
+  }
+
+  .knowledge-block h1{
+    font-size: 30px;
+  }
+
+  .feedback-from-students{
+    padding: 40px 0;
+  }
+
+  .feedback-header{
+    font-size: 30px;
+  }
+}
+
+@media(max-width: 800px) {
+  .conteiner {
+    max-width: 600px;
+  }
+}
+
+@media(max-width: 400px) {}
