--- a/style.css
+++ b/style.css
@@ -136,14 +136,13 @@ h1 {
 .login-btn {
   text-decoration: none;
   font-family: var(--primary-font);
-  font-weight: 900;
+  font-weight: 600;
   font-size: 18px;
   background-color: var(--primary-button-color);
   color: white;
   border: none;
   padding: 8px 20px;
   border-radius: 4px;
-  font-weight: bold;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -186,11 +185,24 @@ h1 {
 
 .welcome-content {
   padding-top: 60px;
-  display: flex;
-  gap: 130px;
+  display: grid;
+  grid-template-areas:
+    "text image"
+    "btn image";
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  gap: 30px;
 }
+ .welcome-main-pic{
+  z-index: -1;
+ }
+ .welcome-pictures{
+  grid-row: span 2;
+  grid-area: image;
+ }
 
 .welcome-text-cont {
+  grid-area: text;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -211,6 +223,7 @@ h1 {
 .next-btn {
   display: flex;
   align-items: center;
+  grid-area: btn;
   gap: 20px;
 }
 
@@ -218,26 +231,36 @@ h1 {
   font-size: 20px;
 }
 
+.twice-column{
+  grid-column: 2 / 3; 
+  grid-row: 2 / 3;
+}
+
 /* Main configuration */
 
 /* Temple section */
 .temple {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 100px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  gap: 30px;
+  padding: 30px 0 100px 0;
 }
 
 .temple-content {
-  padding-top: 80px;
   display: flex;
   flex-direction: column;
+  grid-column: 2 / 3; 
+  grid-row: 1 / 2;
   gap: 40px;
 }
 
 .temple-photo {
   z-index: -1;
+}
+.temple-photo-wrapper{
+  grid-row: span 2;
 }
 
 .uzumaki {
@@ -276,6 +299,15 @@ h1 {
   opacity: 0.7;
 }
 
+.opacityspan{
+  opacity: 0.7;
+}
+
+.status{
+  display: flex;
+  gap: 5px;
+}
+
 .marker-photo{
   height: 40px;
   width: auto;
@@ -286,7 +318,7 @@ h1 {
 }
 
 .starter {
-  margin-left: -160px;
+  margin-left: -30px;
 }
 
 /* Our-courses section */
@@ -418,16 +450,13 @@ h1 {
   margin-top: auto;
 }
 
-.continue-to:hover{
-  color: black;
-}
-
 .absolute-for-course {
   position: relative;
   padding-bottom: 120px;
 }
 
 .courses-cards-back {
+  z-index: -1;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -541,6 +570,10 @@ h1 {
   justify-content: space-between;
 }
 
+.footer-logo{
+  max-width: 110px;
+  max-height: 160px;
+}
 
 .link-list_footer {
   margin-top: 20px;
@@ -707,6 +740,10 @@ h1 {
   opacity: 1;
 }
 
+.status > span{
+  font-weight: 600;
+}
+
 .info-box {
   display: flex;
   background-color: #f4f3fa;
@@ -786,13 +823,9 @@ h1 {
   border-radius: 50px;
 }
 
-.margining {
-  margin-top: 20px;
-}
-
 .video-reiting {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   align-items: start;
 }
@@ -953,7 +986,6 @@ h1 {
   }
 
   .welcome-content {
-    padding-top: 60px;
     gap: 0;
   }
 
@@ -962,7 +994,11 @@ h1 {
   }
 
   .feedback-cards {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .ninja{
+    grid-column: span 2;
   }
 
   .feedback-card {
@@ -1031,12 +1067,112 @@ h1 {
   .feedback-header{
     font-size: 30px;
   }
+
+  .footer-logo{
+    max-width: 90px;
+    height: 130px;
+  }
 }
 
 @media(max-width: 800px) {
   .conteiner {
     max-width: 600px;
   }
+
+  .temple {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+  }
+  .temple-content {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .temple-photo-wrapper {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+
+  .welcome-content {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "text"
+      "image"
+      "btn";
+    gap: 20px;
+    padding-top: 30px;
+    justify-content: center ;
+  }
+
+  .next-btn {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    justify-content: end;
+  }
+
+  .courses-cards{
+    grid-template-columns: 1fr;
+  }
+
+  .starter{
+    margin-left: 0;
+  }
+
+  .feedback-cards{
+    grid-template-columns: 1fr;
+  }
+
+  .ninja{
+    grid-column: span 1;
+  }
+
+  .feedback-botton{
+    font-size: 16px;
+    padding: 12px 40px;
+  }
+
+  .footer-content{
+    flex-direction: column;
+  }
+
 }
 
-@media(max-width: 400px) {}
+@media(max-width: 480px) {
+  .conteiner{
+    max-width: 360px;
+    margin: 0 auto;
+  }
+  .welcome-content {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "text"
+      "image"
+      "btn";
+    gap: 20px;
+    padding-top: 30px;
+  }
+  .footer-content{
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+  .footer-navigation{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-feedback{
+    align-items: center;
+  }
+  .login-btn{
+    font-size: 14px;
+    padding: 8px 10px;
+  }
+  .right-side{
+    gap: 20px;
+  }
+  .temple {
+    padding-bottom: 60px;
+    gap: 20px;
+  }
+}
