--- a/style.css
+++ b/style.css
@@ -3,49 +3,34 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: var(--primary-font);
 }
-
 h1 {
   font-size: 40px;
 }
-
-/* Общий стиль скроллбара */
 ::-webkit-scrollbar {
   opacity: 0.3;
   width: 10px;
   height: 5px;
 }
-
-/* Фон скроллбара */
 ::-webkit-scrollbar-track {
   opacity: 0.3;
   background: #f1f1f1;
-  /* Цвет фона трека */
   border-radius: 10px;
 }
-
-/* Сам "ползунок" (бегунок) */
 ::-webkit-scrollbar-thumb {
   opacity: 0.3;
   background: #f0f0f0;
-  /* Цвет ползунка */
   border-radius: 10px;
 }
-
-/* При наведении */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-
-/* Контейнер(область видимого контента) */
 .conteiner {
   max-width: 1200px;
   margin: 0 auto;
 }
-
 /* Font connect */
 
 @font-face {
@@ -93,12 +78,14 @@ h1 {
 
 /* Header configuration -- Desktop */
 .welcome-page {
-  background-image: url(./images/No-conteiner.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  position: relative;
   height: auto;
   padding-bottom: 30px;
+}
+.welcome-absolute{
+  z-index: -1;
+  position: absolute;
+  width: 100%;
 }
 
 .courses-main-background {
@@ -197,6 +184,8 @@ h1 {
   z-index: -1;
  }
  .welcome-pictures{
+  display: flex;
+  justify-content: center;
   grid-row: span 2;
   grid-area: image;
  }
@@ -230,7 +219,6 @@ h1 {
 .next-btn span {
   font-size: 20px;
 }
-
 .twice-column{
   grid-column: 2 / 3; 
   grid-row: 2 / 3;
@@ -260,7 +248,9 @@ h1 {
   z-index: -1;
 }
 .temple-photo-wrapper{
+  display: flex;
   grid-row: span 2;
+  justify-content: center;
 }
 
 .uzumaki {
@@ -477,17 +467,19 @@ h1 {
 
 .knowledge-icon {
   display: flex;
-  flex-flow: row wrap;
-  align-items: center;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 10px; 
+  scroll-behavior: smooth;
   justify-content: space-between;
 }
 
 .knowledge-icon>img {
-  transition: transform 0.2s;
+  flex: 0 0 auto;
 }
 
-.knowledge-icon>img:hover {
-  transform: scale(1.05);
+.knowledge-icon::-webkit-scrollbar {
+  display: none;
 }
 
 /* Feedback from students */
@@ -570,11 +562,6 @@ h1 {
   justify-content: space-between;
 }
 
-.footer-logo{
-  max-width: 110px;
-  max-height: 160px;
-}
-
 .link-list_footer {
   margin-top: 20px;
   list-style: none;
@@ -592,12 +579,17 @@ h1 {
 }
 
 .feedback-botton {
+  margin-top: 10px;
   color: white;
   font-size: 18px;
   background-color: var(--primary-button-color);
   padding: 10px 30px;
   border-radius: 5px;
   max-width: max-content;
+  text-decoration: none;
+}
+.feedlink{
+  text-decoration: none;
 }
 
 .social-media-links {
@@ -615,6 +607,9 @@ h1 {
 .footer-feedback>p {
   font-size: 18px;
   font-weight: 600;
+}
+.topping{
+  margin-top: -160px;
 }
 
 
@@ -639,6 +634,7 @@ h1 {
 }
 
 .course-welcome-text {
+  max-width: 600px;
   margin-top: 30px;
   font-size: 18px;
   opacity: 0.8;
@@ -654,9 +650,9 @@ h1 {
 
 .background-to-courses {
   position: absolute;
-  bottom: 0;
+  top: 23%;
   left: 0;
-  width: 67%;
+  width: 60%;
   height: auto;
   z-index: -1;
 }
@@ -685,10 +681,17 @@ h1 {
 
 .costom-sort {
   display: flex;
+  overflow-x: auto;
+  overflow-y: hidden; 
+  scroll-behavior: smooth;
   gap: 20px;
+}
+.costom-sort::-webkit-scrollbar {
+  display: none; 
 }
 
 .sort-item {
+  cursor: pointer;
   padding: 8px 16px;
   border-radius: 70px;
   background-color: #F7F7FC;
@@ -701,6 +704,7 @@ h1 {
 }
 
 .common-sort {
+  cursor: pointer;
   margin-right: 0;
   margin-left: auto;
   display: flex;
@@ -711,11 +715,6 @@ h1 {
   color: #64617A;
   font-family: var(--primary-font);
 }
-
-.costomiseded {
-  color: #d94d4d;
-}
-
 
 /* About courses -- Desktop */
 
@@ -751,7 +750,8 @@ h1 {
   padding: 20px;
   gap: 20px;
   max-width: 370px;
-  height: auto;
+  height: max-content;
+  align-items: center;
 }
 
 .info-text p {
@@ -761,47 +761,40 @@ h1 {
   font-size: 16px;
   opacity: 0.7;
 }
-
-.info-icon {
-  margin-top: auto;
-  margin-bottom: 0;
-}
-
 .about-welcome {
   position: relative;
   z-index: 1;
 }
-
 .courses-abcolute {
   position: absolute;
   top: 25px;
   right: 0;
   z-index: -1;
 }
-
 .about-welcome-content {
   padding-top: 20px;
   padding-bottom: 40px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
 }
-
+.about-welcome-right{
+  display: flex;
+  justify-content: end;
+}
 .about-welcome-right>p {
   opacity: 0.7;
 }
-
 .about-welcome-left {
   display: flex;
   flex-flow: column wrap;
   gap: 20px;
 }
-
 .about-welcome-header {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-
 .left-paragraph {
   max-width: 620px;
   color: var(--non-active-text);
@@ -822,15 +815,19 @@ h1 {
   background-color: #F7F7FC;
   border-radius: 50px;
 }
-
 .video-reiting {
   display: grid;
+  grid-template-areas:
+  "item1 item1 item2"
+  "item3 item3 item3"
+  "item4 item4 item4";
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   align-items: start;
 }
 
 .video-frame {
+  grid-area: item1;
   grid-column: span 2;
   width: 100%;
   aspect-ratio: 16 / 9;
@@ -839,6 +836,8 @@ h1 {
 }
 
 .list-section {
+  height: 100%;
+  grid-area: item2;
   background-color: #f7f7fc;
   padding: 20px;
   border-radius: 10px;
@@ -870,30 +869,29 @@ h1 {
   font-weight: 600;
 }
 
-.courses-info {
-  padding-top: 40px;
-}
-
-.information-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
 .tab-menu {
   display: flex;
   position: relative;
-  width: max-content;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: 100%;
   border-bottom: 2px solid #ccc;
   gap: 30px;
+  box-sizing: border-box;
+}
+
+.tab-menu::-webkit-scrollbar {
+  display: none;                 /* Chrome/Safari */
 }
 
 .tab {
+  flex: 0 0 auto;
   padding: 10px 0;
   cursor: pointer;
   position: relative;
   font-size: 18px;
   opacity: 0.6;
+  white-space: nowrap;
 }
 
 .tab.active {
@@ -909,6 +907,7 @@ h1 {
   border-radius: 2px;
 }
 
+
 .course-addiction-info {
   background-color: #F7F7FC;
   border-radius: 10px;
@@ -916,8 +915,18 @@ h1 {
   font-family: var(--primary-font);
   font-size: 18px;
 }
-
-
+.speaker-info{
+  grid-area: item4;
+  grid-column: span 2;
+  background-color: #F7F7FC;
+  border-radius: 10px;
+  padding: 20px;
+  font-family: var(--primary-font);
+  font-size: 18px;
+}
+.speaker-detailed-info{
+  max-width: 80%;
+}
 .text-block {
   font-size: 16px;
   color: #333;
@@ -943,8 +952,15 @@ h1 {
   flex-direction: column;
   gap: 20px;
 }
-
-
+.tab-and-add-wrapper{
+  overflow: hidden;
+  margin-top: 10px;
+  grid-area: item3;
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .information-wrapper {
   width: 100%;
   display: flex;
@@ -957,6 +973,11 @@ h1 {
   display: flex;
   justify-content: space-between;
 }
+.speaker-skills img{
+  max-width: 140px;
+  height: 100%;
+  border-radius: 5px;
+}
 
 .remming {
   font-size: 1.5em;
@@ -966,6 +987,10 @@ h1 {
 
   .welcome-main-pic {
     max-width: 320px;
+  }
+  .welcome-absolute{
+    max-width: 1200px;
+    top: 25%;
   }
 
   .welcome-text-cont h1 {
@@ -986,7 +1011,7 @@ h1 {
   }
 
   .welcome-content {
-    gap: 0;
+    gap: 20px;
   }
 
   .courses-cards {
@@ -1059,6 +1084,10 @@ h1 {
   .knowledge-block h1{
     font-size: 30px;
   }
+  .knowledge-icon{
+    justify-content: start;
+    gap: 20px;
+  }
 
   .feedback-from-students{
     padding: 40px 0;
@@ -1067,16 +1096,59 @@ h1 {
   .feedback-header{
     font-size: 30px;
   }
-
-  .footer-logo{
-    max-width: 90px;
-    height: 130px;
+  .footer-navigation{
+    gap: 20px;
+  }
+  .background-to-courses{
+    width: 50%;
+    top: 24%;
+    bottom: auto;
+  }
+  .courses-welcome h1{
+    font-size: 60px;
+    margin-left: 25px;
+  }
+  .courses-right-side>img{
+    max-width: 300px;
+  }
+  .course-welcome-text{
+    max-width: 400px;
+  }
+  .about-welcome-header h1{
+    font-size: 28px;
+  }
+  .info-item{
+    font-size: 14px;
+  }
+  .video-reiting{
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "item1" 
+    "item3"
+    "item4"
+    "item2";
+  }
+  .tab-and-add-wrapper{
+    grid-column: span 1;
+  }
+  .video-frame{
+    grid-column: span 1;
+  }
+  .speaker-info{
+    grid-column: span 1;
+  }
+  .topping{
+    margin-top: 0px;
   }
 }
 
 @media(max-width: 800px) {
   .conteiner {
     max-width: 600px;
+  }
+  .welcome-absolute{
+    max-width: 800px;
+    top: 50%;
   }
 
   .temple {
@@ -1107,7 +1179,6 @@ h1 {
   .next-btn {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
-    justify-content: end;
   }
 
   .courses-cards{
@@ -1130,11 +1201,78 @@ h1 {
     font-size: 16px;
     padding: 12px 40px;
   }
+  .footer-navigation {
+    display: flex;
+    gap: 10px;
+}
 
   .footer-content{
-    flex-direction: column;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto;
   }
-
+  .footer-logo{
+    align-self: center;
+    justify-self: center;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+  .footer-navigation{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  .footer-feedback{
+    grid-row: 2 / 3;
+  }
+  .knowledge-icon{
+    justify-content: start;
+    gap: 20px;
+  }
+  .courses-welcome{
+    flex-direction: column;
+    gap: 30px;
+  }
+  .courses-welcome h1{
+    font-size: 50px;
+    margin-top: 20px;
+    margin-left: 0px;
+  }
+  .course-welcome-text{
+    max-width: 100%;
+  }
+  .courses-right-side{
+    display: flex;
+  }
+  .background-to-courses{
+    width: 60%;
+    top: 12%;
+  }
+  .courses-welcome h1 {
+    margin-left: 20px;
+  }
+  .about-welcome-content{
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  .about-welcome-right{
+    justify-content: start;
+  }
+  .speaker-list-item{
+    font-size: 14px;
+  }
+  .speaker-detailed-info {
+    max-width: 60%;
+  }
+  .about-welcome{
+    padding-top: 30px;
+  }
+  .about-welcome-left{
+    gap: 30px;
+  }
+  .info-item {
+    padding: 8px 12px;
+  }
 }
 
 @media(max-width: 480px) {
@@ -1152,6 +1290,7 @@ h1 {
     padding-top: 30px;
   }
   .footer-content{
+    display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
@@ -1164,6 +1303,12 @@ h1 {
   .footer-feedback{
     align-items: center;
   }
+  .footer-navigation{
+    padding: 20px 0;
+    border-top: 1px solid #EFF0F6;
+    border-bottom: 1px solid #EFF0F6;
+    width: 100%;
+  }
   .login-btn{
     font-size: 14px;
     padding: 8px 10px;
@@ -1174,5 +1319,49 @@ h1 {
   .temple {
     padding-bottom: 60px;
     gap: 20px;
+  }
+  .knowledge-icon{
+    justify-content: start;
+    gap: 20px;
+  }
+  .welcome-page{
+    background: none;
+  }
+  .common-sort{
+    margin-right: auto;
+  }
+  .common-item{
+    font-size: 14px;
+  }
+  .background-to-courses{
+    width: 100%;
+    top: 10%;
+  }
+  .about-welcome-content{
+    gap: 20px;
+  }
+  .speaker-list-item{
+    font-size: 14px;
+  }
+  .text-block {
+    max-width: 300px;
+  }
+  .speaker-skills{
+    max-width: 300px;
+  }
+  .speaker-skills img{
+    max-width: 100px;
+  }
+  .speaker-detailed-info {
+    max-width: 56%;
+  }
+  .remming {
+    font-size: 1.2em;
+  }
+  .about-welcome-content{
+    padding-top: 30px;
+  }
+  .detail-info{
+    gap: 10px;
   }
 }
