--- a/style.css
+++ b/style.css
@@ -319,10 +319,6 @@ h1 {
   justify-content: space-between;
 }
 
-.courses-header>h1 {
-  font-size: 40px;
-}
-
 .all-courses {
   text-decoration: none;
   background: none;
@@ -719,7 +715,7 @@ h1 {
 /* About courses -- Desktop */
 
 .breadcrumbs {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
   font-family: var(--primary-font);
   white-space: nowrap;
@@ -1069,20 +1065,12 @@ h1 {
     gap: 10px;
   }
 
-  .courses-header>h1{
-    font-size: 30px;
-  }
-
   .absolute-for-course{
     padding-bottom: 60px;
   }
 
   .space-for-our_knowledge{
     padding: 20px 0;
-  }
-
-  .knowledge-block h1{
-    font-size: 30px;
   }
   .knowledge-icon{
     justify-content: start;
@@ -1276,6 +1264,10 @@ h1 {
   .feedlink{
     margin-top: 0;
   }
+  .courses-bloock{
+    background-size: cover;
+    background-position: bottom;
+  }
 }
 
 @media(max-width: 480px) {
@@ -1366,5 +1358,15 @@ h1 {
   }
   .detail-info{
     gap: 10px;
+  }
+  .courses-about-main{
+    padding-bottom: 60px;
+  }
+  .course-main {
+    padding-bottom: 60px;
+  }
+  .feedback-header{
+    font-size: 24px;
+    margin-left: 10px;
   }
 }
